compiler/parser/src/snapshots/rustpython_parser__function__tests__lambda_pos_args_with_defaults.snap
---
source: compiler/parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Located {
            range: 0..23,
            custom: (),
            node: Expr {
                value: Located {
                    range: 0..23,
                    custom: (),
                    node: Lambda {
                        args: Arguments {
                            posonlyargs: [],
                            args: [
                                Located {
                                    range: 7..8,
                                    custom: (),
                                    node: ArgData {
                                        arg: "a",
                                        annotation: None,
                                        type_comment: None,
                                    },
                                },
                                Located {
                                    range: 10..11,
                                    custom: (),
                                    node: ArgData {
                                        arg: "b",
                                        annotation: None,
                                        type_comment: None,
                                    },
                                },
                                Located {
                                    range: 16..17,
                                    custom: (),
                                    node: ArgData {
                                        arg: "c",
                                        annotation: None,
                                        type_comment: None,
                                    },
                                },
                            ],
                            vararg: None,
                            kwonlyargs: [],
                            kw_defaults: [],
                            kwarg: None,
                            defaults: [
                                Located {
                                    range: 12..14,
                                    custom: (),
                                    node: Constant {
                                        value: Int(
                                            20,
                                        ),
                                        kind: None,
                                    },
                                },
                                Located {
                                    range: 18..20,
                                    custom: (),
                                    node: Constant {
                                        value: Int(
                                            30,
                                        ),
                                        kind: None,
                                    },
                                },
                            ],
                        },
                        body: Located {
                            range: 22..23,
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                    },
                },
            },
        },
    ],
)
